parslers-benchmark/src/tests/invalid/syntaxErr/while/whilErr.wacc
# while typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  whil false do
    skip
  done
end
